back to ocmalmklib
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@8 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/src/Makefile
+++ b/src/Makefile
@@ -70,20 +70,19 @@ lib_byte: $(LIB_BYTE) $(LIB_CMI) $(LIBMATH_BYTE) $(LIBMATH_CMI)
 all: byte opt
 
 $(LIB): $(LIB_CMIFILES) $(LIB_CMXFILES) $(LIB_COBJ_FILES)
-	echo $(LIB)
-	$(OCAMLOPT) -a -o $@ $(LINKFLAGS) \
+	$(OCAMLMKLIB) -o `basename $@ .cmxa` $(LINKFLAGS) \
 	$(LIB_COBJ_FILES) $(LIB_CMXFILES)
 
 $(LIB_BYTE): $(LIB_CMIFILES) $(LIB_CMOFILES) $(LIB_COBJ_FILES)
-	$(OCAMLC) -custom -a -o $@ $(LINKFLAGS_BYTE) \
+	$(OCAMLMKLIB) -custom -o `basename $@ .cma` $(LINKFLAGS_BYTE) \
 	$(LIB_COBJ_FILES) $(LIB_CMOFILES)
 
 $(LIBMATH): $(LIBMATH_CMIFILES) $(LIBMATH_CMXFILES) $(LIBMATH_COBJ_FILES)
-	$(OCAMLOPT) -a -o $@ $(LINKFLAGS_MATH) \
+	$(OCAMLMKLIB) -o `basename $@ .cmxa` $(LINKFLAGS_MATH) \
 	$(LIBMATH_COBJ_FILES) $(LIBMATH_CMXFILES)
 
 $(LIBMATH_BYTE): $(LIBMATH_CMIFILES) $(LIBMATH_CMOFILES) $(LIBMATH_COBJ_FILES)
-	$(OCAMLC) -custom -a -o $@ $(LINKFLAGS_MATH_BYTE) \
+	$(OCAMLMKLIB) -custom -o `basename $@ .cma` $(LINKFLAGS_MATH_BYTE) \
 	$(LIBMATH_COBJ_FILES) $(LIBMATH_CMOFILES)
 
 $(PA_R): pa_ocamlr.ml
