No need for R CMD anymore. R environment variables are determined in the build process.
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@16 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/master.Makefile.in
+++ b/master.Makefile.in
@@ -101,7 +101,7 @@ ROOT=@ROOT@
 	$(OCAMLOPT) $(OCAMLPP) $(COMPFLAGS) -c $<
 
 %.o: %.c
-	$(OCAMLOPT) $(COMPFLAGS) -c $<
+	$(OCAMLOPT) $(COMPFLAGS) -ccopt -fPIC -c $<
 
 %.ml:%.mll
 	$(OCAMLLEX) $<
