build process: add detection of installed R, use variables set at configure time
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@18 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/configure.in
+++ b/configure.in
@@ -44,6 +44,13 @@ echo "ocaml library path is $OCAMLLIB"
 ############################
 COMPFLAGS=
 
+# Looking for R
+###############
+AC_PATH_PROG(R,R,no)
+if test "$R" = no ; then
+        AC_MSG_ERROR(Cannot find R.)
+fi
+
 
 ##############################
 # Check needed libs
@@ -96,7 +103,7 @@ AC_SUBST(INSTALLBIN)
 AC_SUBST(ROOT)
 AC_SUBST(LIBDIR)
 AC_SUBST(DESTDIR)
-
+AC_SUBST(R)
 AC_SUBST(DEBUG_LEVEL)
 
 AC_SUBST(LIB)
