fix doc and doc generation
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@27 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/src/Makefile
+++ b/src/Makefile
@@ -122,7 +122,7 @@ test.byte: $(LIB_BYTE) $(LIBMATH_BYTE) test.cmo
 
 # Documentation :
 #################
-dump.odoc: *.ml *.mli
+dump.odoc: *.mli
 	$(OCAMLDOCOPT) $(INCLUDES) -keep-code $(OCAMLPP) $(COMPFLAGS) -sort -dump $@ \
 	`ls $^ | grep -v example.ml | grep -v example2.ml | grep -v test`
 
