Building oCamlR.cm*.
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@33 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/master.Makefile.in
+++ b/master.Makefile.in
@@ -71,6 +71,10 @@ LIB=@LIB@
 LIB_BYTE=@LIB_BYTE@
 LIB_CMI=@LIB_CMI@
 
+LIBINTERP=@LIBINTERP@
+LIBINTERP_BYTE=@LIBINTERP_BYTE@
+LIBINTERP_CMI=@LIBINTERP_CMI@
+
 LIBMATH=@LIBMATH@
 LIBMATH_BYTE=@LIBMATH_BYTE@
 LIBMATH_CMI=@LIBMATH_CMI@
