Typo in configure.in.
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@35 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/configure.in
+++ b/configure.in
@@ -112,7 +112,7 @@ AC_SUBST(LIB_CMI)
 
 AC_SUBST(LIBINTERP)
 AC_SUBST(LIBINTERP_BYTE)
-AC_SUBST(LIINTERP_CMI)
+AC_SUBST(LIBINTERP_CMI)
 
 AC_SUBST(LIBMATH)
 AC_SUBST(LIBMATH_BYTE)
