Removing OCamlR from r.cm[ox].
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@37 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/src/Makefile
+++ b/src/Makefile
@@ -42,8 +42,7 @@ LINKFLAGS_MATH_BYTE=$(INCLUDES) -ccopt -L$(RLIBDIR)  -cclib -lRmath
 
 LIB_CMOFILES=\
 	rdevices.cmo \
-	r.cmo \
-	oCamlR.cmo
+	r.cmo
 
 LIB_CMXFILES=$(LIB_CMOFILES:.cmo=.cmx)
 LIB_CMIFILES= $(LIB_CMOFILES:.cmo=.cmi)
