Tidying up rstdenv.R output.
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@39 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/src/Makefile
+++ b/src/Makefile
@@ -117,11 +117,11 @@ libr_math_stubs.a: r_math.o
 $(PA_R): pa_ocamlr.ml
 	$(OCAMLC) -I +camlp4 -I +camlp4/Camlp4Parsers -c -pp camlp4of.opt $<
 
-r.ml.part1: rstdenv.R
-	$(R) --silent --vanilla --slave < rstdenv.R > r.ml.part1
+r.ml.part2: rstdenv.R
+	$(R) --silent --vanilla --slave < rstdenv.R > r.ml.part2
 
-r.ml: r.ml.part1 r.ml.part2
-	cat r.ml.part1 r.ml.part2 > r.ml
+r.ml: r.ml.part1 r.ml.part2 r.ml.part3
+	cat r.ml.part1 r.ml.part2 r.ml.part3 > r.ml
 
 test.x: $(LIB) $(LIBMATH) test.cmx
 	$(OCAMLOPT) -verbose -o $@ unix.cmxa $(LIBMATH) $(LIB) test.cmx
