Commented r_exec, because of warnings. Makefile now contains correct GENERATED_FILES.
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@62 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/src/Makefile
+++ b/src/Makefile
@@ -150,7 +150,7 @@ dep.ps:dep.dot
 # backup, clean and depend :
 ############################
 
-GENERATED_FILES=rstdenv.ml
+GENERATED_FILES=r.ml.part2 r.ml
 
 cleanocamldoc:
 	$(RM) -r ocamldoc
