Added -Wall for .o targets.
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@66 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/master.Makefile.in
+++ b/master.Makefile.in
@@ -106,7 +106,7 @@ ROOT=@ROOT@
 	$(OCAMLOPT) $(OCAMLPP) $(COMPFLAGS) -c $<
 
 %.o: %.c
-	$(OCAMLOPT) $(COMPFLAGS) -ccopt -fPIC -c $<
+	$(OCAMLOPT) -Wall $(COMPFLAGS) -ccopt -fPIC -c $<
 
 %.ml:%.mll
 	$(OCAMLLEX) $<
