--- a/master.Makefile.in
+++ b/master.Makefile.in
@@ -106,7 +106,7 @@ ROOT=@ROOT@
 	$(OCAMLOPT) $(OCAMLPP) $(COMPFLAGS) -c $<
 
 %.o: %.c
-	$(OCAMLOPT) -Wall $(COMPFLAGS) -ccopt -fPIC -c $<
+	$(OCAMLOPT) -ccopt -Wall $(COMPFLAGS) -ccopt -fPIC -c $<
 
 %.ml:%.mll
 	$(OCAMLLEX) $<
