Making C code compile.
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@83 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/src/Makefile
+++ b/src/Makefile
@@ -142,7 +142,7 @@ dep.ps:dep.dot
 # backup, clean and depend :
 ############################
 
-GENERATED_FILES=r.ml.part2 r.ml
+GENERATED_FILES=r.part2.ml r.ml
 
 cleanocamldoc:
 	$(RM) -r ocamldoc
