add missing LIBINTERP declarations in configure.in
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@108 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/configure.in
+++ b/configure.in
@@ -77,6 +77,10 @@ LIBMATH=rmath.cmxa
 LIBMATH_BYTE=rmath.cma
 LIBMATH_CMI=rmath.cmi
 
+LIBINTERP=oCamlR.cmxa
+LIBINTERP_BYTE=oCamlR.cma
+LIBINTERP_CMI=oCamlR.cmi
+
 LIBDIR=${OCAMLLIB}/R
 
 #############################
