add R.Raw.parse_string : string -> sexp
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/trunk@141 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/src/Makefile
+++ b/src/Makefile
@@ -115,10 +115,15 @@ r.part2.ml: r.part2.R
 r.ml: r.part1.ml r.part2.ml r.part3.ml
 	cat r.part1.ml r.part2.ml r.part3.ml > r.ml
 
+# Testing :
+###########
 test.x: $(LIB) $(LIBMATH) test.cmx
 	$(OCAMLOPT) -verbose -o $@ unix.cmxa $(LIBMATH) $(LIB) test.cmx
 test.byte: $(LIB_BYTE) $(LIBMATH_BYTE) test.cmo
 	$(OCAMLC) -verbose -o $@ unix.cma $(LIB_BYTE) $(LIBMATH_BYTE) test.cmo
+
+tests/test_parse.x: $(LIB) tests/test_parse.ml
+	$(OCAMLOPT) -o $@ unix.cmxa $^
 
 # Documentation :
 #################
