new root makefile
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/branches/yziquel@303 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,6 @@
 AC_INIT([ocaml-r], [0.2])
-AM_INIT_AUTOMAKE([-Wall foreign])
-
-AC_CONFIG_MACRO_DIR([m4])
+#AC_CONFIG_MACRO_DIR([m4])
+m4_include([m4/ocaml.m4])
 
 AC_PROG_CC
 
