typos, contents, moving text, fixing xml, adding sections
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/branches/yziquel@305 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/website/Makefile
+++ b/website/Makefile
@@ -18,11 +18,11 @@ XML_FILES=\
 
 all: $(XML_FILES)
 	$(MKDIR) $(DEST_DIR)
-#	$(MYSITE) site.xml -lang fr -o $(DEST_DIR)
+	$(MYSITE) site.xml -lang fr -o $(DEST_DIR)
 	$(MYSITE) site.xml -lang en -o $(DEST_DIR)
 	$(CP) news.rss $(DEST_DIR)
 	cp style.css $(DEST_DIR)
-	cp ../ChangeLog $(DEST_DIR)
+	cp ../Changelog $(DEST_DIR)
 	$(CP) $(DEST_DIR)/index.en.html $(DEST_DIR)/index.html
 	rpl "&amp;&amp;" "&&" $(DEST_DIR)/*.html
 
