mise a jour de la doc de reference
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/branches/yziquel@308 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/src/Makefile
+++ b/src/Makefile
@@ -160,6 +160,11 @@ clean:
 test: build
 	$(OCAML) -init ocamlinit
 
+doc: r.mli rbase.mli rstats.mli math/rmath.mli
+	$(MKDIR) ocamldoc
+	$(OCAMLFIND) ocamldoc -package calendar $(INCLUDES) \
+	-html -d ocamldoc $^
+
 install: all remove
 	$(OCAMLFIND) install R META *.a *.cm[ai] *.cmxa dllr_stubs.so
 
