fix missing OCAML var
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/branches/yziquel@310 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/master.Makefile.in
+++ b/master.Makefile.in
@@ -27,6 +27,7 @@
 
 # Various commands and dir
 ##########################
+OCAML    = @OCAML@
 OCAMLC   = @OCAMLC@ -warn-error FSPU -dtypes
 OCAMLOPT = @OCAMLOPT@ -warn-error FSPU -dtypes
 OCAMLDEP = @OCAMLDEP@
