generate r.mli before r.ml
git-svn-id: svn+ssh://svn.gna.org/svn/ocaml-r/branches/yziquel@315 8462dd83-5746-40b0-b0c8-3ca2f889d9d2

--- a/src/Makefile
+++ b/src/Makefile
@@ -69,7 +69,7 @@ rstats.cma: rstats.cmo
 rstats.cmxa: rstats.cmx
 	$(OCAMLOPT) -verbose -a -o rstats.cmxa rstats.cmx
 
-r.ml: \
+R_ML_SOURCES=\
 	  r_Env.ml              \
 	  standard.ml           \
 	  sexptype.ml           \
@@ -88,7 +88,9 @@ r.ml: \
 	  reduction.ml          \
 	  initialisation.ml     \
 	  base.ml
-	cat $^ > $@
+
+r.ml: r.mli $(R_ML_SOURCES)
+	cat $(R_ML_SOURCES) > $@
 
 r.mli: \
 	  incipit.mli           \
