Allmost compiles again.

--- a/src/Makefile
+++ b/src/Makefile
@@ -25,38 +25,49 @@
 #             guillaume.yziquel@citycable.ch                                    #
 #################################################################################
 
+RLIBDIR = /usr/lib/R/lib
+RINCLUDE = /usr/share/R/include
+
 all: byte native
 
-byte: r.cmi r.cmo r.cma
-native: r.cmi r.cmx r.cmxa
+byte: r.cmi r.cmo r.cma oCamlR.cmo
+native: r.cmi r.cmx r.cmxa oCamlR.cmx
 
 clean:
-	rm -f standard.ml.p4
-	rm *.o *.cmi *.cmo *.cmx
+	rm -f standard.ml *.o *.a *.so *.cmi *.cmo *.cmx
+
+standard.ml: standard.R
+	R --silent --vanilla --slave < $< > $@
 
 r.cmi: r.mli
 	ocamlfind ocamlc r.mli
 
-r.cmo: r.ml r.cmi standard.ml.p4
+r.cmo: r.ml r.cmi standard.ml
 	ocamlfind ocamlc -c -package camlp4.macro -syntax camlp4o r.ml
 
-r.cmx: r.ml r.cmi standard.ml.p4
+r.cmx: r.ml r.cmi standard.ml
 	ocamlfind ocamlopt -c -package camlp4.macro -syntax camlp4o r.ml
 
-opt: libopt mathopt
-byte: lib math
+r.cma: dllr_stubs.so r.cmo
+	ocamlfind ocamlc -verbose -a -dllpath $(RLIBDIR) -dllib dllr_stubs.so -dllib libR.so -o r.cma r.cmo
 
-libopt: r.cmxa r.cmxs oCamlR.cmx rbase.cmxa rstats.cmxa rmethodsHook.cmo rmethods.cmxa
-lib: r.cma oCamlR.cmo rbase.cma rstats.cma rmath.cma rmethodsHook.cmo rmethods.cma
+r.cmxa: dllr_stubs.so r.cmx
+	ocamlfind ocamlopt -verbose -a -ccopt -L$(RLIBDIR) -cclib -lr_stubs -cclib -lR -o r.cmxa r.cmx
 
-mathopt: rmath.cmxa
-math: rmath.cma
+libr_stubs.a: r_stubs.o
+	ar rcs libr_stubs.a r_stubs.o
 
-rmath.cma: dllrmath_stubs.so math/rmath.cmo
-	$(OCAMLC) -verbose -a -dllib dllrmath_stubs.so -dllib libRmath.so -o rmath.cma math/rmath.cmo
+dllr_stubs.so: libr_stubs.a r_stubs.o
+	ocamlmklib -verbose -o r_stubs r_stubs.o
 
-rmath.cmxa: dllrmath_stubs.so math/rmath.cmx
-	$(OCAMLOPT) -verbose -a -cclib -lrmath_stubs -cclib -lRmath -o rmath.cmxa math/rmath.cmx
+r_stubs.o: r_stubs.c
+	ocamlopt -verbose -ccopt -Wall -ccopt -fPIC -ccopt -I$(RINCLUDE) -c r_stubs.c
+
+oCamlR.cmo: oCamlR.ml r.cmi
+	ocamlfind ocamlc -c oCamlR.ml
+
+oCamlR.cmx: oCamlR.ml r.cmi
+	ocamlfind ocamlopt -c oCamlR.ml
 
 librmath_stubs.a: math/rmath_stubs.o
 	ar rcs librmath_stubs.a math/rmath_stubs.o
@@ -64,13 +75,13 @@ librmath_stubs.a: math/rmath_stubs.o
 dllrmath_stubs.so: librmath_stubs.a math/rmath_stubs.o
 	ocamlmklib -verbose -o rmath_stubs math/rmath_stubs.o
 
+rmath.cma: dllrmath_stubs.so math/rmath.cmo
+	$(OCAMLC) -verbose -a -dllib dllrmath_stubs.so -dllib libRmath.so -o rmath.cma math/rmath.cmo
+
+rmath.cmxa: dllrmath_stubs.so math/rmath.cmx
+	$(OCAMLOPT) -verbose -a -cclib -lrmath_stubs -cclib -lRmath -o rmath.cmxa math/rmath.cmx
+
 math/rmath_stubs.o: math/rmath_stubs.c
-
-r.cma: dllr_stubs.so r.cmo
-	$(OCAMLC) -verbose -a -dllpath $(RLIBDIR) -dllib dllr_stubs.so -dllib libR.so -o r.cma r.cmo
-
-r.cmxa: dllr_stubs.so r.cmx
-	$(OCAMLOPT) -verbose -a -ccopt -L$(RLIBDIR) -cclib -lr_stubs -cclib -lR -o r.cmxa r.cmx
 
 rbase.cma: rbase.cmo
 	$(OCAMLC) -verbose -a -o rbase.cma rbase.cmo
@@ -89,9 +100,6 @@ rmethods.cma : rmethods.cmo
 
 rmethods.cmxa: rmethods.cmx
 	$(OCAMLOPT) -verbose -a -o rmethods.cmxa rmethods.cmx
-
-standard.ml.p4: standard.R
-	R --silent --vanilla --slave < $< > $@
 
 RBASE_ML_SOURCES= \
 	  r-base/main.ml        \
@@ -123,12 +131,6 @@ rmethods.mli: r-methods/main.mli
 rmethodsHook.ml:
 	cp r-methods/hook.ml rmethodsHook.ml
 
-libr_stubs.a: r_stubs.o
-	ar rcs libr_stubs.a r_stubs.o
-
-dllr_stubs.so: libr_stubs.a r_stubs.o
-	$(OCAMLMKLIB) -verbose -o r_stubs r_stubs.o
-
 test: all
 	$(OCAML) -init ocamlinit
 
@@ -138,7 +140,7 @@ doc: r.mli rbase.mli rstats.mli math/rmath.mli
 	-html -d ocamldoc $^
 
 install: all remove
-	cd _build; ocamlfind install R ../META *.cma *.so *.o *.cmx *.cmxs oCamlR.cmo *Hook.cmo r.mli r.cmi
+	ocamlfind install R META *.cma *.so *.o *.cmx *.cmxs oCamlR.cmo *Hook.cmo r.mli r.cmi
 
 remove:
 	ocamlfind remove R
