--- a/src/r-methods/Makefile
+++ b/src/r-methods/Makefile
@@ -6,16 +6,8 @@ clean:
 	rm -f *.o *.cmo *.cmx
 	ocamlbuild -clean
 
-byte: _build/$(RPACKAGE).byte.otarget $(RPACKAGE)Hook.cmo
-native: _build/$(RPACKAGE).native.otarget $(RPACKAGE)Hook.cmx
-
-$(RPACKAGE)Hook.cmo: _build/$(RPACKAGE).byte.otarget $(RPACKAGE)Hook.ml
-	ocamlfind ocamlc -I .. -c $(RPACKAGE)Hook.ml
-	rm -f $(RPACKAGE)Hook.cmi
-
-$(RPACKAGE)Hook.cmx: _build/$(RPACKAGE).native.otarget $(RPACKAGE)Hook.ml
-	ocamlfind ocamlopt -I .. -c $(RPACKAGE)Hook.ml
-	rm -f $(RPACKAGE)Hook.cmi
+byte: _build/$(RPACKAGE).byte.otarget
+native: _build/$(RPACKAGE).native.otarget
 
 _build/$(RPACKAGE).otarget: $(RPACKAGE).itarget
 	ocamlbuild -no-hygiene $(RPACKAGE).otarget
