--- a/src/r-stats/Makefile
+++ b/src/r-stats/Makefile
@@ -6,16 +6,8 @@ clean:
 	rm -f *.o *.cmo *.cmx r.cmi
 	ocamlbuild -clean
 
-byte: _build/$(RPACKAGE).byte.otarget $(RPACKAGE)Hook.cmo
-native: _build/$(RPACKAGE).native.otarget $(RPACKAGE)Hook.cmx
-
-$(RPACKAGE)Hook.cmo: r.cmi _build/$(RPACKAGE).byte.otarget $(RPACKAGE)Hook.ml
-	ocamlfind ocamlc -c $(RPACKAGE)Hook.ml
-	rm -f $(RPACKAGE)Hook.cmi
-
-$(RPACKAGE)Hook.cmx: r.cmi _build/$(RPACKAGE).native.otarget $(RPACKAGE)Hook.ml
-	ocamlfind ocamlopt -c $(RPACKAGE)Hook.ml
-	rm -f $(RPACKAGE)Hook.cmi
+byte: _build/$(RPACKAGE).byte.otarget
+native: _build/$(RPACKAGE).native.otarget
 
 _build/$(RPACKAGE).otarget: r.cmi $(RPACKAGE).itarget
 	ocamlbuild -no-hygiene $(RPACKAGE).otarget
