--- a/src/r-base/Makefile
+++ b/src/r-base/Makefile
@@ -9,17 +9,20 @@ clean:
 byte: _build/$(RPACKAGE).byte.otarget
 native: _build/$(RPACKAGE).native.otarget
 
-_build/$(RPACKAGE).otarget: r.cmi $(RPACKAGE).ml $(RPACKAGE).mli $(RPACKAGE).itarget
+_build/$(RPACKAGE).otarget: $(RPACKAGE).ml $(RPACKAGE).mli $(RPACKAGE).itarget
+	cp ../r.cmi .
 	ocamlbuild -no-hygiene $(RPACKAGE).otarget
+	rm -f r.cmi
 
-_build/$(RPACKAGE).byte.otarget: r.cmi $(RPACKAGE).ml $(RPACKAGE).mli $(RPACKAGE).byte.itarget
+_build/$(RPACKAGE).byte.otarget: $(RPACKAGE).ml $(RPACKAGE).mli $(RPACKAGE).byte.itarget
+	cp ../r.cmi .
 	ocamlbuild -no-hygiene $(RPACKAGE).byte.otarget
+	rm -f r.cmi
 
-_build/$(RPACKAGE).native.otarget: r.cmi $(RPACKAGE).ml $(RPACKAGE).mli $(RPACKAGE).native.itarget
+_build/$(RPACKAGE).native.otarget: $(RPACKAGE).ml $(RPACKAGE).mli $(RPACKAGE).native.itarget
+	cp ../r.cmi .
 	ocamlbuild -no-hygiene $(RPACKAGE).native.otarget
-
-r.cmi: ../r.cmi
-	cp ../r.cmi r.cmi
+	rm -f r.cmi
 
 $(RPACKAGE).ml: main.ml
 	camlp4o -o $(RPACKAGE).ml -printer Camlp4OCamlPrinter -parser Camlp4MacroParser main.ml
